{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 182,
  "lineage": "7f9502d0-a150-e333-c3cc-19b7ca0ff6de",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:security-group/sg-0f0ac670973779f21",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f0ac670973779f21",
            "ingress": [],
            "name": "zero-to-eks-cluster-2026040610371845100000000c",
            "name_prefix": "zero-to-eks-cluster-",
            "owner_id": "021891577047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zero-to-eks-cluster",
              "env": "dev",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-cluster",
              "env": "dev",
              "project": "zero-to-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:security-group/sg-0b69d9d460dcee70c",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0b69d9d460dcee70c",
            "ingress": [],
            "name": "zero-to-eks-node-2026040610371847560000000d",
            "name_prefix": "zero-to-eks-node-",
            "owner_id": "021891577047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zero-to-eks-node",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "owned",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-node",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "owned",
              "project": "zero-to-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3814367317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0ac670973779f21",
            "security_group_rule_id": "sgr-0141511039f4019ad",
            "self": false,
            "source_security_group_id": "sg-0b69d9d460dcee70c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3522826024",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-08c85f9eec8705009",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1235618239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-09e53e6aab4fe090c",
            "self": false,
            "source_security_group_id": "sg-0f0ac670973779f21",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3847684997",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-0a7c61404e42e5d38",
            "self": false,
            "source_security_group_id": "sg-0f0ac670973779f21",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-739599379",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-093f20ebe1974ddaa",
            "self": false,
            "source_security_group_id": "sg-0f0ac670973779f21",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1061771314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-0e3b980566fa9112d",
            "self": false,
            "source_security_group_id": "sg-0f0ac670973779f21",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1541958649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-0791c99ebbaf2c90a",
            "self": false,
            "source_security_group_id": "sg-0f0ac670973779f21",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2605535133",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-0815d29cfa9f63e46",
            "self": false,
            "source_security_group_id": "sg-0f0ac670973779f21",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2597934758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-08dcb69474f88b42c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1171837469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-089429ad9d76d916f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3783750130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b69d9d460dcee70c",
            "security_group_rule_id": "sgr-0528bbd28d94e19f9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:network-acl/acl-01c29dbfdfaaf0a74",
            "default_network_acl_id": "acl-01c29dbfdfaaf0a74",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01c29dbfdfaaf0a74",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "021891577047",
            "subnet_ids": [
              "subnet-01cf3d0bc6687b1d7",
              "subnet-0955b0deafb24d1cc",
              "subnet-0a15b3a0a397ba4e7"
            ],
            "tags": {
              "Name": "zero-to-eks-vpc-default",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-default",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:route-table/rtb-07b5fe59e7bb3610f",
            "default_route_table_id": "rtb-07b5fe59e7bb3610f",
            "id": "rtb-07b5fe59e7bb3610f",
            "owner_id": "021891577047",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "zero-to-eks-vpc-default",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-default",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:security-group/sg-0807d4cfa49740c9a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0807d4cfa49740c9a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "021891577047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zero-to-eks-vpc-default",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-default",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fea14c923a767dc",
            "arn": "arn:aws:ec2:ap-south-1:021891577047:elastic-ip/eipalloc-05fea14c923a767dc",
            "domain": "vpc",
            "id": "eipalloc-05fea14c923a767dc",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-79-223.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.79.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "zero-to-eks-vpc-ap-south-1a",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-ap-south-1a",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:internet-gateway/igw-0f35ec0bbd2846d34",
            "id": "igw-0f35ec0bbd2846d34",
            "owner_id": "021891577047",
            "tags": {
              "Name": "zero-to-eks-vpc",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fea14c923a767dc",
            "association_id": "eipassoc-0b5c128aaafe06a34",
            "connectivity_type": "public",
            "id": "nat-0728abaeca9d55f5e",
            "network_interface_id": "eni-0c3ab641079d7cbd7",
            "private_ip": "10.0.101.17",
            "public_ip": "65.1.79.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01cf3d0bc6687b1d7",
            "tags": {
              "Name": "zero-to-eks-vpc-ap-south-1a",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-ap-south-1a",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01af77963e63984e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0728abaeca9d55f5e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01af77963e63984e0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f35ec0bbd2846d34",
            "id": "r-rtb-09aef93be03432c311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09aef93be03432c31",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:route-table/rtb-01af77963e63984e0",
            "id": "rtb-01af77963e63984e0",
            "owner_id": "021891577047",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "zero-to-eks-vpc-private",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-private",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:route-table/rtb-09aef93be03432c31",
            "id": "rtb-09aef93be03432c31",
            "owner_id": "021891577047",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "zero-to-eks-vpc-public",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-public",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0201b1f0a09b4d8d6",
            "route_table_id": "rtb-01af77963e63984e0",
            "subnet_id": "subnet-053d6c8efd4d4ed09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e26e34dc6bccc0a",
            "route_table_id": "rtb-01af77963e63984e0",
            "subnet_id": "subnet-0955b0deafb24d1cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0be5622b6413499",
            "route_table_id": "rtb-09aef93be03432c31",
            "subnet_id": "subnet-01cf3d0bc6687b1d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd54e239da300e69",
            "route_table_id": "rtb-09aef93be03432c31",
            "subnet_id": "subnet-0a15b3a0a397ba4e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:subnet/subnet-053d6c8efd4d4ed09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053d6c8efd4d4ed09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891577047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zero-to-eks-vpc-private-ap-south-1a",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-private-ap-south-1a",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "zero-to-eks"
            },
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:subnet/subnet-0955b0deafb24d1cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0955b0deafb24d1cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891577047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zero-to-eks-vpc-private-ap-south-1b",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-private-ap-south-1b",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "zero-to-eks"
            },
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:subnet/subnet-01cf3d0bc6687b1d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cf3d0bc6687b1d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891577047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zero-to-eks-vpc-public-ap-south-1a",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-public-ap-south-1a",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "zero-to-eks"
            },
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:subnet/subnet-0a15b3a0a397ba4e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a15b3a0a397ba4e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891577047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zero-to-eks-vpc-public-ap-south-1b",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc-public-ap-south-1b",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "zero-to-eks"
            },
            "vpc_id": "vpc-0d02541cfb00af36c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:021891577047:vpc/vpc-0d02541cfb00af36c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c29dbfdfaaf0a74",
            "default_route_table_id": "rtb-07b5fe59e7bb3610f",
            "default_security_group_id": "sg-0807d4cfa49740c9a",
            "dhcp_options_id": "dopt-0b8e1a78a6f24128d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d02541cfb00af36c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b5fe59e7bb3610f",
            "owner_id": "021891577047",
            "tags": {
              "Name": "zero-to-eks-vpc",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            },
            "tags_all": {
              "Name": "zero-to-eks-vpc",
              "env": "dev",
              "kubernetes.io/cluster/zero-to-eks": "shared",
              "project": "zero-to-eks"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}